force-app/main/default/objects/Opportunity_Certificate__c/fields/Principal_Auditor__c.field-meta.xml
<CustomField>
    <fullName>Principal_Auditor__c</fullName>
    <label>Principal Auditor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>