force-app/main/default/objects/Opportunity_Certificate__c/fields/Print_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Print_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Billing Address</label>
    <type>Checkbox</type>
</CustomField>