force-app/main/default/objects/Opportunity_Certificate__c/fields/Print_certificate_Annex__c.field-meta.xml
<CustomField>
    <fullName>Print_certificate_Annex__c</fullName>
    <label>Print certificate Annex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Annex</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>