force-app/main/default/objects/Opportunity_Certificate__c/fields/Print_Head__c.field-meta.xml
<CustomField>
    <fullName>Print_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you want to print headquarter/Invoicing office header on certificate template</inlineHelpText>
    <label>Print Headquater Header</label>
    <type>Checkbox</type>
</CustomField>