force-app/main/default/objects/Opportunity_Certificate__c/fields/Print_Shipping_Address_on_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Print_Shipping_Address_on_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Shipping Address on Certificate</label>
    <type>Checkbox</type>
</CustomField>