force-app/main/default/objects/Opportunity_Certificate__c/fields/Processing_Site_Other__c.field-meta.xml
<CustomField>
    <fullName>Processing_Site_Other__c</fullName>
    <label>Processing Site Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>