force-app/main/default/objects/Opportunity_Certificate__c/fields/Processing_Unit_Formula__c.field-meta.xml
<CustomField>
    <fullName>Processing_Unit_Formula__c</fullName>
    <formula>If (
				  ISPICKVAL(Processing_Unit_Value__c, &apos;Other&apos;),  Processing_Unit_Value_Other__c, TEXT(Processing_Unit_Value__c)
)</formula>
    <label>Processing Unit Formula</label>
    <type>Text</type>
</CustomField>