force-app/main/default/objects/Opportunity_Certificate__c/fields/Processing_Unit_Value__c.field-meta.xml
<CustomField>
    <fullName>Processing_Unit_Value__c</fullName>
    <label>Processing Unit Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biogas plant</fullName>
            </value>
            <value>
                <fullName>Biomethane plant</fullName>
            </value>
            <value>
                <fullName>Plup mill</fullName>
            </value>
            <value>
                <fullName>Biodiesel plant</fullName>
            </value>
            <value>
                <fullName>Refinery</fullName>
            </value>
            <value>
                <fullName>Ethanol plant</fullName>
            </value>
            <value>
                <fullName>Sugar mill</fullName>
            </value>
            <value>
                <fullName>HVO plant</fullName>
            </value>
            <value>
                <fullName>Treatment plant (waste/residues)</fullName>
            </value>
            <value>
                <fullName>Crushing plant</fullName>
            </value>
            <value>
                <fullName>Co-Processing</fullName>
            </value>
            <value>
                <fullName>Methanol plant</fullName>
            </value>
            <value>
                <fullName>Oil mill</fullName>
            </value>
            <value>
                <fullName>Melting plant</fullName>
            </value>
            <value>
                <fullName>Pyrolysis plant</fullName>
            </value>
            <value>
                <fullName>Polymerisation plant</fullName>
            </value>
            <value>
                <fullName>Speciality chemical plant</fullName>
            </value>
            <value>
                <fullName>Mechanical recycling plant</fullName>
            </value>
            <value>
                <fullName>(Plastic) waster processor</fullName>
            </value>
            <value>
                <fullName>Cracker</fullName>
            </value>
            <value>
                <fullName>Converter</fullName>
            </value>
            <value>
                <fullName>Electrolysis plant</fullName>
            </value>
            <value>
                <fullName>Energy producer</fullName>
            </value>
            <value>
                <fullName>Food processing plant</fullName>
            </value>
            <value>
                <fullName>Liquefaction Plant</fullName>
            </value>
            <value>
                <fullName>HEFA plant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>