force-app/main/default/objects/Opportunity_Certificate__c/fields/Processing_Unit_Value_Other__c.field-meta.xml
<CustomField>
    <fullName>Processing_Unit_Value_Other__c</fullName>
    <label>Processing Unit - Other</label>
    <type>TextArea</type>
</CustomField>