force-app/main/default/objects/Opportunity_Certificate__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>