force-app/main/default/objects/Opportunity_Certificate__c/fields/Product_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Product_Certificate__c</fullName>
    <label>Product Certificate</label>
    <type>TextArea</type>
</CustomField>