force-app/main/default/objects/Opportunity_Certificate__c/fields/Product_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Certificate_Number__c</fullName>
    <label>Product Certificate Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>