force-app/main/default/objects/Opportunity_Certificate__c/fields/Product_Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Certificate_Type__c</fullName>
    <label>Product Certificate Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Operations and Harvesting Harmonized Food Safety Standard</fullName>
            </value>
            <value>
                <fullName>Post Operations Harmonized Food Safety Standard</fullName>
            </value>
            <value>
                <fullName>Animal Feed</fullName>
            </value>
            <value>
                <fullName>Animal Product</fullName>
            </value>
            <value>
                <fullName>Dietary Supplements</fullName>
            </value>
            <value>
                <fullName>Food Packaging</fullName>
            </value>
            <value>
                <fullName>Food Manufacturing</fullName>
            </value>
            <value>
                <fullName>Pet Food</fullName>
            </value>
            <value>
                <fullName>Primary Animal</fullName>
            </value>
            <value>
                <fullName>Primary Plant</fullName>
            </value>
            <value>
                <fullName>Storage &amp; Distribution</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>