force-app/main/default/objects/Opportunity_Certificate__c/fields/Product_Certificate_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Certificate_Type_Formula__c</fullName>
    <description>This formula fields user to display Product Certificate Type into multi-line.</description>
    <formula>IF(INCLUDES(Product_Certificate_Type__c , &quot;Field Operations and Harvesting Harmonized Food Safety Standard&quot;), &quot;Field Operations and Harvesting Harmonized Food Safety Standard&quot;+BR(), NULL)&amp;
IF(INCLUDES(Product_Certificate_Type__c , &quot;Post Operations Harmonized Food Safety Standard&quot;), &quot;Post Operations Harmonized Food Safety Standard&quot;+BR(), NULL)&amp;
IF(INCLUDES(Product_Certificate_Type__c , &quot;Storage &amp; Distribution&quot;), &quot;Storage &amp; Distribution&quot;+BR(), NULL)&amp;
IF(INCLUDES(Product_Certificate_Type__c , &quot;Dietary Supplements&quot;), &quot;Dietary Supplements&quot;+BR(), NULL)&amp;
IF(INCLUDES(Product_Certificate_Type__c , &quot;Food Manufacturing&quot;), &quot;Food Manufacturing&quot;+BR(), NULL)&amp;
IF(INCLUDES(Product_Certificate_Type__c , &quot;Food Packaging&quot;), &quot;Food Packaging&quot;+BR(), NULL)&amp;
IF(INCLUDES(Product_Certificate_Type__c , &quot;Primary Animal&quot;), &quot;Primary Animal&quot;+BR(), NULL)&amp;
IF(INCLUDES(Product_Certificate_Type__c , &quot;Animal Product&quot;), &quot;Animal Product&quot;+BR(), NULL)&amp;
IF(INCLUDES(Product_Certificate_Type__c , &quot;Primary Plant&quot;), &quot;Primary Plant&quot;+BR(), NULL)&amp;
IF(INCLUDES(Product_Certificate_Type__c , &quot;Intermediate&quot;), &quot;Intermediate&quot;+BR(), NULL)&amp;
IF(INCLUDES(Product_Certificate_Type__c , &quot;Animal Feed&quot;), &quot;Animal Feed&quot;+BR(), NULL)&amp;
IF(INCLUDES(Product_Certificate_Type__c , &quot;Pet Food&quot;), &quot;Pet Food&quot;+BR(), NULL)&amp;
IF(INCLUDES(Product_Certificate_Type__c , &quot;Basic&quot;), &quot;Basic&quot;, NULL)</formula>
    <label>Product Certificate Type Formula</label>
    <type>Text</type>
</CustomField>