force-app/main/default/objects/Opportunity_Certificate__c/fields/Product_Claims__c.field-meta.xml
<CustomField>
    <fullName>Product_Claims__c</fullName>
    <label>Product Claims</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSC 100%</fullName>
            </value>
            <value>
                <fullName>FSC Mix</fullName>
            </value>
            <value>
                <fullName>FSC Controlled Wood</fullName>
            </value>
            <value>
                <fullName>FSC Recycled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>