force-app/main/default/objects/Opportunity_Certificate__c/fields/Product_Handeling_Facility__c.field-meta.xml
<CustomField>
    <fullName>Product_Handeling_Facility__c</fullName>
    <label>Product Handeling Facility</label>
    <type>TextArea</type>
</CustomField>