force-app/main/default/objects/Opportunity_Certificate__c/fields/Product_Handeling_Field__c.field-meta.xml
<CustomField>
    <fullName>Product_Handeling_Field__c</fullName>
    <label>Product Handeling Field</label>
    <type>TextArea</type>
</CustomField>