force-app/main/default/objects/Opportunity_Certificate__c/fields/Product_Handling_inspected_for_FSMA_PSR__c.field-meta.xml
<CustomField>
    <fullName>Product_Handling_inspected_for_FSMA_PSR__c</fullName>
    <label>Product Handling inspected for FSMA PSR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>