force-app/main/default/objects/Opportunity_Certificate__c/fields/Product_Handling_PostHarvest_Activity__c.field-meta.xml
<CustomField>
    <fullName>Product_Handling_PostHarvest_Activity__c</fullName>
    <label>Product Handling/ PostHarvest Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>