force-app/main/default/objects/Opportunity_Certificate__c/fields/Product_s__c.field-meta.xml
<CustomField>
    <fullName>Product_s__c</fullName>
    <label>Product(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>