force-app/main/default/objects/Opportunity_Certificate__c/fields/Product_Scope__c.field-meta.xml
<CustomField>
    <fullName>Product_Scope__c</fullName>
    <label>Product Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>