force-app/main/default/objects/Opportunity_Certificate__c/fields/Production_Area_covered_under_FSMA_PSR__c.field-meta.xml
<CustomField>
    <fullName>Production_Area_covered_under_FSMA_PSR__c</fullName>
    <label>Production Area covered under FSMA PSR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>