force-app/main/default/objects/Opportunity_Certificate__c/fields/Production_Area_NOT_covered_under_FSMA_P__c.field-meta.xml
<CustomField>
    <fullName>Production_Area_NOT_covered_under_FSMA_P__c</fullName>
    <label>Production Area NOT covered under FSMA P</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>