force-app/main/default/objects/Opportunity_Certificate__c/fields/Products_Observed__c.field-meta.xml
<CustomField>
    <fullName>Products_Observed__c</fullName>
    <label>Products Observed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>