force-app/main/default/objects/Opportunity_Certificate__c/fields/Program_Membership__c.field-meta.xml
<CustomField>
    <fullName>Program_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Membership</label>
    <referenceTo>Program_Membership__c</referenceTo>
    <relationshipLabel>Opportunity Certificates</relationshipLabel>
    <relationshipName>Opportunity_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>