force-app/main/default/objects/Opportunity_Certificate__c/fields/ProgramName__c.field-meta.xml
<CustomField>
    <fullName>ProgramName__c</fullName>
    <formula>IF( ISBLANK( Opportunity__c ), Certificate__r.Program__r.Name, Opportunity__r.Programc__r.Name )</formula>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>