force-app/main/default/objects/Opportunity_Certificate__c/fields/Projected_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Projected_Tonnage__c</fullName>
    <label>Projected Tonnage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>