force-app/main/default/objects/Opportunity_Certificate__c/fields/ProvisionalCertificateFourmula__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalCertificateFourmula__c</fullName>
    <formula>IF(
    OR(
        INCLUDES(Phase_of_Group__c, &quot;MS A&quot;),
        INCLUDES(Phase_of_Group__c, &quot;Eligibility&quot;)
    ),
    &quot;Provisional Certificate&quot;,
    &quot;Certificate&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProvisionalCertificateFourmula</label>
    <type>Text</type>
</CustomField>