force-app/main/default/objects/Opportunity_Certificate__c/fields/ProvisionalCertificateFourmula_del__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalCertificateFourmula_del__c</fullName>
    <formula>IF( ISPICKVAL(Phase_of_Group__c, &apos;MS A&apos;) , &apos;PROVISIONAL CERTIFICATE&apos; , &apos; &apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProvisionalCertificateFourmula</label>
    <type>Text</type>
</CustomField>