force-app/main/default/objects/Opportunity_Certificate__c/fields/RA_included_in_Public_Summary__c.field-meta.xml
<CustomField>
    <fullName>RA_included_in_Public_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RA included in Public Summary</label>
    <type>Checkbox</type>
</CustomField>