force-app/main/default/objects/Opportunity_Certificate__c/fields/Ranch_Field_name_and_location__c.field-meta.xml
<CustomField>
    <fullName>Ranch_Field_name_and_location__c</fullName>
    <label>Ranch/Field name and location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>