force-app/main/default/objects/Opportunity_Certificate__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>