force-app/main/default/objects/Opportunity_Certificate__c/fields/ReauditDueDateFrom__c.field-meta.xml
<CustomField>
    <fullName>ReauditDueDateFrom__c</fullName>
    <label>Re-audit Due Date (From)</label>
    <type>Date</type>
</CustomField>