force-app/main/default/objects/Opportunity_Certificate__c/fields/ReauditDueDateTo__c.field-meta.xml
<CustomField>
    <fullName>ReauditDueDateTo__c</fullName>
    <label>Re-audit Due Date (To)</label>
    <type>Date</type>
</CustomField>