force-app/main/default/objects/Opportunity_Certificate__c/fields/Retailer_Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Wholesaler__c</fullName>
    <label>Retailer/Wholesaler?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>WH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>