force-app/main/default/objects/Opportunity_Certificate__c/fields/RSB_Participant_Code__c.field-meta.xml
<CustomField>
    <fullName>RSB_Participant_Code__c</fullName>
    <label>RSB Participant Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>