force-app/main/default/objects/Opportunity_Certificate__c/fields/RSB_Program_Filter__c.field-meta.xml
<CustomField>
    <fullName>RSB_Program_Filter__c</fullName>
    <formula>AND(
(ProgramName__c &lt;&gt; &quot;RSB CORSIA&quot;),
(ProgramName__c &lt;&gt; &quot;RSB SAF Book-and-Claim&quot;),
(ProgramName__c &lt;&gt; &quot;RSB Global Fuels&quot;),
(ProgramName__c &lt;&gt; &quot;RSB EU-RED&quot;),
(ProgramName__c &lt;&gt; &quot;RSB Global Advanced Products&quot;),
(ProgramName__c &lt;&gt; &quot;RSB Smallholder Standard&quot;),
(ProgramName__c &lt;&gt; &quot;RSB Japan Fit&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSB Program Filter</label>
    <type>Checkbox</type>
</CustomField>