force-app/main/default/objects/Opportunity_Certificate__c/fields/RSPO_membership_number__c.field-meta.xml
<CustomField>
    <fullName>RSPO_membership_number__c</fullName>
    <label>RSPO membership number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>