force-app/main/default/objects/Opportunity_Certificate__c/fields/RSPO_membership_number_of_parent_company__c.field-meta.xml
<CustomField>
    <fullName>RSPO_membership_number_of_parent_company__c</fullName>
    <label>RSPO membership number of parent company</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>