force-app/main/default/objects/Opportunity_Certificate__c/fields/RSPO_registered_parent_company__c.field-meta.xml
<CustomField>
    <fullName>RSPO_registered_parent_company__c</fullName>
    <label>RSPO registered parent company</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>