force-app/main/default/objects/Opportunity_Certificate__c/fields/Scheme_Outgrowers__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Outgrowers__c</fullName>
    <label>Scheme / Outgrowers?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheme Small Holders</fullName>
            </value>
            <value>
                <fullName>Outgrowers</fullName>
            </value>
            <value>
                <fullName>Outgrowers/ISH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>