force-app/main/default/objects/Opportunity_Certificate__c/fields/Scope_Of_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Scope_Of_Certificate__c</fullName>
    <label>Chain of Custody options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Controlled Blending</fullName>
            </value>
            <value>
                <fullName>Mass Balance</fullName>
            </value>
            <value>
                <fullName>Physical Segregation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>