force-app/main/default/objects/Opportunity_Certificate__c/fields/Scope_of_certification__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_certification__c</fullName>
    <label>Scope of certification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>