force-app/main/default/objects/Opportunity_Certificate__c/fields/Sells_CW__c.field-meta.xml
<CustomField>
    <fullName>Sells_CW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FSC</description>
    <label>Sells CW</label>
    <type>Checkbox</type>
</CustomField>