force-app/main/default/objects/Opportunity_Certificate__c/fields/SharePoint_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Folder_Id__c</fullName>
    <label>SharePoint Folder Id</label>
    <type>TextArea</type>
</CustomField>