force-app/main/default/objects/Opportunity_Certificate__c/fields/SharePoint_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Folder_URL__c</fullName>
    <label>SharePoint Folder URL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>