force-app/main/default/objects/Opportunity_Certificate__c/fields/Site_Of_System_User_Certified_As__c.field-meta.xml
<CustomField>
    <fullName>Site_Of_System_User_Certified_As__c</fullName>
    <label>Site Of System User Certified As</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Point of Origin</fullName>
            </value>
            <value>
                <fullName>Collecting Point</fullName>
            </value>
            <value>
                <fullName>Trader with Storage</fullName>
            </value>
            <value>
                <fullName>Warehouse and Storage Facilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>