force-app/main/default/objects/Opportunity_Certificate__c/fields/SQF_Specific_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SQF_Specific_Account_Name__c</fullName>
    <label>SQF - Specific Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>