force-app/main/default/objects/Opportunity_Certificate__c/fields/Start_date_of_first_certificate__c.field-meta.xml
<CustomField>
    <fullName>Start_date_of_first_certificate__c</fullName>
    <label>Start date of first certificate</label>
    <type>Date</type>
</CustomField>