force-app/main/default/objects/Opportunity_Certificate__c/fields/Sub_GLN_or_GGN__c.field-meta.xml
<CustomField>
    <fullName>Sub_GLN_or_GGN__c</fullName>
    <label>Sub-GLN or GGN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>