force-app/main/default/objects/Opportunity_Certificate__c/fields/Supply_chain_model__c.field-meta.xml
<CustomField>
    <fullName>Supply_chain_model__c</fullName>
    <label>Supply Chain Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identity Preserved</fullName>
            </value>
            <value>
                <fullName>Segregated</fullName>
            </value>
            <value>
                <fullName>Mass Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>