force-app/main/default/objects/Opportunity_Certificate__c/fields/System_of_Control__c.field-meta.xml
<CustomField>
    <fullName>System_of_Control__c</fullName>
    <description>FSC</description>
    <label>System of Control</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer System</fullName>
            </value>
            <value>
                <fullName>Percentage System</fullName>
            </value>
            <value>
                <fullName>Credit System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>