force-app/main/default/objects/Opportunity_Certificate__c/fields/Target_Pest__c.field-meta.xml
<CustomField>
    <fullName>Target_Pest__c</fullName>
    <label>Target Pest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>