force-app/main/default/objects/Opportunity_Certificate__c/fields/Temporary_Exemption_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Exemption_Expiration__c</fullName>
    <label>Temporary Exemption Expiration</label>
    <type>Date</type>
</CustomField>