force-app/main/default/objects/Opportunity_Certificate__c/fields/Temporary_Exemption_Granted__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Exemption_Granted__c</fullName>
    <label>Temporary Exemption Granted</label>
    <type>Date</type>
</CustomField>