force-app/main/default/objects/Opportunity_Certificate__c/fields/TLA_Initiate__c.field-meta.xml
<CustomField>
    <fullName>TLA_Initiate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FSC</description>
    <label>TLA Initiate</label>
    <type>Checkbox</type>
</CustomField>