force-app/main/default/objects/Opportunity_Certificate__c/fields/Total_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Area__c</fullName>
    <label>Total Area</label>
    <length>10</length>
    <type>Text</type>
</CustomField>